--- a/_config.yml
+++ b/_config.yml
@@ -92,8 +92,8 @@ social:
 
   - name: LinkedIn
     icon: linkedin
-    username: Ben Centra
-    url: https://www.linkedin.com/pub/ben-centra/47/769/60a
+    username: "John Waggoner"
+    url: ""
     desc: Connect with me on LinkedIn
     share: false
 
