--- a/_config.yml
+++ b/_config.yml
@@ -54,10 +54,10 @@ jekyll-archives:
 
 # Category descriptions (for archive pages)
 descriptions:
-  - cat: Blogs
+  - cat: blogs
     desc: "Blog posts."
 
-  - cat: References
+  - cat: references
     desc: "References for anything and everything."
 
 # Social icons and sharing options
